// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-components default-import.js 1`] = `
Object {
  "components": Object {
    "ceea0565a65f75c8c7b6b355d6d335ac": Object {
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "name": "Button",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    },
  },
  "kinds": Object {
    "Story": Object {
      "component": "Button",
      "components": Object {
        "Button": "ceea0565a65f75c8c7b6b355d6d335ac",
      },
      "title": "Story",
    },
  },
  "stories": Object {},
}
`;

exports[`csf-components story-subcomponents.js 1`] = `
Object {
  "components": Object {
    "2f4bd34d15be236674abaf6e894afe6e": Object {
      "from": "../../components/button-named-arrow-func",
      "importedName": "Button",
      "name": "Button",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    },
    "dc262d21cd7820523c7e0bacca461e87": Object {
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "name": "ArrowButton",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    },
  },
  "kinds": Object {
    "Story": Object {
      "components": Object {
        "ArrowButton": "dc262d21cd7820523c7e0bacca461e87",
        "Button": "2f4bd34d15be236674abaf6e894afe6e",
      },
      "title": "Story",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [],
      "component": "ArrowButton",
      "loc": Object {
        "end": Object {
          "column": 34,
          "line": 8,
        },
        "start": Object {
          "column": 21,
          "line": 8,
        },
      },
      "name": "story",
      "source": "() => 'hello'",
      "subcomponents": Object {
        "My Button Tab": "Button",
      },
    },
  },
}
`;

exports[`csf-components subcomponents.js 1`] = `
Object {
  "components": Object {
    "2f4bd34d15be236674abaf6e894afe6e": Object {
      "from": "../../components/button-named-arrow-func",
      "importedName": "Button",
      "name": "Button",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    },
    "dc262d21cd7820523c7e0bacca461e87": Object {
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "name": "ArrowButton",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    },
  },
  "kinds": Object {
    "Story": Object {
      "component": "ArrowButton",
      "components": Object {
        "ArrowButton": "dc262d21cd7820523c7e0bacca461e87",
        "Button": "2f4bd34d15be236674abaf6e894afe6e",
      },
      "subcomponents": Object {
        "Button": "Button",
      },
      "title": "Story",
    },
  },
  "stories": Object {},
}
`;
